--- a/ProjectTreinritten/Views/ShoppingCart/Payment.cshtml
+++ b/ProjectTreinritten/Views/ShoppingCart/Payment.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjectTreinritten.Domain.Entities.Zetels
+﻿@model ProjectTreinritten.ViewModel.ShoppingCartVM
 
 @{
     ViewData["Title"] = "Payment";
@@ -6,13 +6,20 @@
 
 <h2>Payment</h2>
 
-<h4>Zetels</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <div>
             Bedankt om te boeken! Hieronder vind u de zetel nummers per rit
         </div>
+        @foreach(var item in Model.Cart)
+        {
+            <div class="row">
+                Naam: @item.Naam
+                VoorNaam: @item.Voornaam
+            </div>
+        }
+
     </div>
 </div>
 
