--- a/ProjectTreinritten/Views/Historiek/Mislukt.cshtml
+++ b/ProjectTreinritten/Views/Historiek/Mislukt.cshtml
@@ -5,5 +5,5 @@
 
 <h2>Mislukt</h2>
 <div>
-    Sorry maar deze rit vertrekt binnen de drie dagen en kan dus niet meer worden geannuleerd!
+    Deze rit vertrekt binnen de 3 dagen en kan dus niet meer geannuleerd worden.
 </div>
