--- a/ProjectTreinritten/Views/Trein/Over.cshtml
+++ b/ProjectTreinritten/Views/Trein/Over.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-12 headerTxt">
             <div>Dit project is gemaakt door Pieter Debaere en Gilles Verstraeten in opdracht van meneer De Waele voor het vak Web Development.</div>
-            <div>Hierbij kregen wij de opdracht een e-commerce site te bouwen waar het mogelijk is TGV tickets te boeken naar 7 verschillende europese steden.</div>
+            <div>Hierbij kregen wij de opdracht een e-commerce site te bouwen waar het mogelijk is TGV tickets te boeken naar 7 verschillende Europese steden.</div>
         </div>
     </div>
     <div class="row">
