--- a/ProjectTreinritten/Views/Trein/PageNotFound.cshtml
+++ b/ProjectTreinritten/Views/Trein/PageNotFound.cshtml
@@ -3,10 +3,7 @@
     ViewData["Title"] = "PageNotFound";
 }
 
-<h2>PageNotFound</h2>
-
+<h2>Pagina niet gevonden</h2>
 <div>
-    <p>
-        page not found!
-    </p>
+    De pagina die u probeerde te bezoeken werd niet gevonden.
 </div>
