--- a/ProjectTreinritten/Views/Trein/Boeken.cshtml
+++ b/ProjectTreinritten/Views/Trein/Boeken.cshtml
@@ -9,7 +9,8 @@
 
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
             <form asp-action="KiezenRit">
                 <!--asp-validation-summary="ModelOnly" veranderd naar "All" -->
                 <div asp-validation-summary="All" class="text-danger"></div>
@@ -147,6 +148,7 @@
                 </div>
             </form>
         </div>
+        <div class="col-md-2"></div>
     </div>
 </div>
 
